--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,17 +1,26 @@
 <div id="<%= dom_id course %>">
+  <div class="card">
+    <div class="card-header">
+      <i class="fa-solid fa-book"></i>
+      <strong> <%= link_to course.title, course_path(course) %></strong>
+    </div>
+    <div class="card-body">
+      <%= course.description %>
+    </div>
 
-  <p>
-    <strong>Title:</strong>
-    <%= course.title %>
-  </p>
+    <div class="card-footer">
+      <i class="fa-regular fa-clock"></i>
+      <%= course.created_at.strftime('%d-%b-%Y') %>
+      <div class="row"></div>
+      <i class="fa-solid fa-chalkboard-user"></i>
+      <%= course.user %>
+    </div>
+    <div class="card-footer">
+      <%= link_to "Show", course, class: 'btn btn-sm btn-primary' %>
+      <%= link_to "Edit", edit_course_path(course), class: 'btn btn-sm btn-warning'  %>
+      <%= link_to "Destroy", course, method: :delete, data: { confirm: 'Are you sure ?' }, class: 'btn btn-sm btn-danger'  %>
+    </div>
+  </div>
 
-  <p>
-    <strong>Description:</strong>
-    <%= course.description %>
-  </p>
-  <p>
-    <strong>User:</strong>
-    <%= course.user %>
-  </p>
 
 </div>
