--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,7 +1,11 @@
-<h1>Editing course</h1>
-
-<%= render "form", course: @course %>
-
+<div class="card">
+  <div class="card-header">
+    <h1>Editing course</h1>
+  </div>
+  <div class="card-body">
+    <%= render "form", course: @course %>
+  </div>
+</div>
 <br>
 
 <div>
