--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,5 +3,5 @@
 <%= render @course %>
 
 <div>
-   <%= button_to "Back to courses", courses_path %>
+   <%= link_to "Back to courses", courses_path %>
 </div>
