--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,10 @@
           <li class="nav-item">
             <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Users", users_path, class: "nav-link"  %>
+          </li>
+
           <li class="form-inline my-2 my-lg-0">
             <%= form_tag(courses_path, method: :get) do %>
               <div class="input-group">
